<resources>
    <string name="app_name">Translator</string>
    <string name="error_textview_stub">Error</string>
    <string name="reload_button">Reload</string>
    <string name="undefined_error">Undefined error</string>
    <string name="empty_server_response_on_success">Пустой ответ от сервера</string>
    <string name="button_search">Поиск</string>
    <string name="search_hint">Слово для перевода</string>
    <string name="delete_description">X</string>
    <string name="find_description">F</string>
    <string name="no_internet_message">"Отсутствует подключение к интернету. Проверьте настройки."</string>
    <string name="bottom_menu_title_main">Переводчик</string>
    <string name="menu_main">Переводчик</string>
    <string name="bottom_menu_title_history">История</string>
    <string name="word_translate">Перевод: %s</string>
    <string name="word_pos">Часть речи: %s</string>
    <string name="word_mean">Использование: %s</string>
    <string name="word_synonym">Синонимы: %s</string>
    <string name="word_example">Примеры: %s</string>
    <string name="word_transcription">[%s]</string>
    <string name="bottom_menu_title_find_in_history">Поиск в истории</string>
    <string name="title_search">Поиск в истории</string>
    <string name="bottom_menu_title_favourite">Избранное</string>
    <string name="success_added_to_favourite">Добавлено в избранное</string>
    <string name="title_clear">Очистить избранное</string>
    <string name="title_clear_history">Очистить историю</string>
    <string name="success_clear">Удалены все слова</string>
    <string name="title_alert_find">Поиск слова в истории.</string>
    <string name="alert_positive_text">Найти</string>
    <string name="alert_negative_text">Отмена</string>
    <string name="alert_find_hint">Слово для поиска</string>
    <string name="example_word">Hello</string>
    <string name="example_transcription">Транскрипция</string>
    <string name="example_translate">Перевод</string>
    <string name="example_part_of_speech">Часть речи</string>
    <string name="example_mean">Используется</string>
    <string name="example_synonym">Синонимы</string>
    <string name="example_example">Примеры</string>
    <string name="internet_active">Internet is available: %s</string>
    <string name="widget_title_text">Последний перевод:</string>
</resources>