<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/search_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_hint"
            android:textColorHint="@color/colorPrimaryDark"
            app:hintTextColor="@color/colorPrimaryDark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search_edit_text"
                style="@style/BaseEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionSearch" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/clear_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="@dimen/activity_main_clear_text_margin_end"
            android:contentDescription="@string/delete_description"
            android:src="@drawable/ic_clear"
            android:visibility="gone"
            app:tint="@color/colorPrimaryDark"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/find"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="@dimen/activity_main_find_margin_end"
            android:contentDescription="@string/find_description"
            android:enabled="false"
            android:src="@drawable/ic_find"
            android:visibility="visible"
            app:tint="@color/colorPrimaryDark"
            tools:visibility="visible" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/success_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/activity_main_success_frame_margin_top"
        android:gravity="center">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/main_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/loading_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progress_bar_horizontal"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <ProgressBar
            android:id="@+id/progress_bar_round"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/error_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/error_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/main_error_text_margin_horizontal"
            android:text="@string/error_textview_stub" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reload_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reload_button" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>